--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,34 @@
-django
-pymysql
-python-dateutil
-celery 
-redis
+amqp==5.3.1
+asgiref==3.8.1
+billiard==4.2.1
+celery==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.2.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+cryptography==44.0.2
+Django==5.1.7
+django-anymail==13.0
+idna==3.10
+kombu==5.5.3
+mysqlclient==2.2.7
+ngrok==1.4.0
+pillow==11.1.0
+prompt_toolkit==3.0.51
+psycopg2-binary==2.9.10
+pycparser==2.22
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+redis==6.0.0
+requests==2.32.3
+six==1.17.0
+sqlparse==0.5.3
+tzdata==2025.2
+urllib3==2.4.0
+vine==5.1.0
+wcwidth==0.2.13
