--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 cryptography==44.0.2
+dj-database-url==2.3.0
 Django==5.1.7
 django-anymail==13.0
+django-pwa==2.0.1
 idna==3.10
 kombu==5.5.3
 mysqlclient==2.2.7
@@ -28,6 +30,7 @@ redis==6.0.0
 requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 vine==5.1.0
